--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,21 +19,26 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      
+      <%= link_to "Banku", root_path, class: "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
         
+        <%= link_to "Sign in", new_user_session_path, class: "navbar-brand" %>
+        <%= link_to "Sign up", new_user_registration_path, class: "navbar-brand" %>
+        <%= link_to "Perfil", profile_path, class: "navbar-brand" %>
       </ul>
       
       
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+<div class="container">
 <%= yield %>
+</div>
 </body>
 </html>
